--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "license": "MIT",
     "require": {
         "php": ">=5.2.0",
-        "illuminate/support": "~4.0||~5.0@dev",
+        "illuminate/support": ">=~4.0",
         "symfony/yaml": "2.4.*"
     },
     "require-dev": {
